--- a/portofoliokartika.html
+++ b/portofoliokartika.html
@@ -1,1 +1,58 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        table {
+        border-collapse: collapse;
+        width: 100%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+        tr {
+        border-bottom: 1px solid #ddd;
+        }
+    </style>
+</head>
+<body>
+    <h1 title="Header 1">Portofolio Kartika Fitri</h1>
+    <p>Berikut adalah portofolio pribadi saya selama berkuliah <p>
+    <table style="width:60%">
+        <tr>
+            <th>Tahun</th>
+            <th>Jenis Kegiatan</th>
+            <th>Bukti Kegiatan</th>
+        </tr>
+        <tr>
+            <td align="center">2021-Sekarang </td>
+            <td><ol>
+                <li>Volunteer Digital Campaign Pengamat Fest (Creative Economy)</li>
+                <li>Volunteer Digital Campaign Self Boosting oleh Bloomin dan Puan Bisa</li>
+                <li>Volunteer "Care to share" oleh Tabula id</li>
+                <li>Staff Organisasi Lembaga Pecinta Bisnis</li>
+                <li>Sekretaris Divisi Eksternal Organisasi Forum Mahasiswa Blitar Universitas Negeri Malang </li>
+                <li>Formablium Mengabdi (kegiatan volunteer di SD di Blitar)</li>
+                <li>Panitia Webinar Meet Up bareng MABA Formablium 2021</li>
+                <li>Panitia Education Fair Organisasi Formablium 2021  </li>
+                <li>Pemateri dan sharing session acara Meet Up Bareng MABA Formablium 2022</li>
+                <li>Project Based Intern Virtual Internship Experience di Kompas Growth Center Course Analyst</li>
+                <li>Project Based Intern Virtual Internship Experience di Bank Muamalat Product and Business Development Program</li>
+                <li>Peserta  Studi Independen Bersertifikat Digital Transformasi di SEAL Malang</li>
+                <li>Small bisnis owner rice bowl (kenyangin ricebowl)</li>
+            </ol>
+            </td>
+            <td align="center">
+                <img src="self boosting.jpg" width="100">
+                <br><img src="care to share.jpg" width="100">
+                <br><img src="formablium mengabdi.jpg" width="100">
+                <br><img src="webinar mumbm 21 fmb.jpg" width="100">
+                <br><img src="organisasi fmb.jpg" width="100">
+                <br><img src="pemateri mubm fmb 22.jpg" width="100">
+                <br><img src="course analyst.jpg" width="100">
+                <br><img src="loa seal.jpg" width="100">
+                <br><img src="offline seal 1.jpg" width="100">
+                <br><img src="offline seal 2.jpg" width="100">
+                <br><img src="presentasi offline.jpg" width="100">
+                <br><img src="kelompok seal.jpg" width="100">
+                <br><img src="ricebowl.jpg" width="100"> 
+        
+</body>
+</html>
