--- a/table.html
+++ b/table.html
@@ -15,10 +15,11 @@
     no, nama, kelompok 
 -->
 
-<table>
-    <tr>
-        <th>No</th>
-        <th>Nama</th>
+<table border="1"
+    <tr></tr>
+    
+        
+        <th>Na
         <th>Kelompok</th>
     </tr>
     <tr>
