--- a/portofoliokartika.html
+++ b/portofoliokartika.html
@@ -2,15 +2,9 @@
 <html lang="en">
 <head>
     <style>
-        table {
-        border-collapse: collapse;
-        width: 100%;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-        tr {
-        border-bottom: 1px solid #ddd;
-        }
+       
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 title="Header 1">Portofolio Kartika Fitri</h1>
@@ -56,3 +50,4 @@
         
 </body>
 </html>
+
