--- a/portofolio.html
+++ b/portofolio.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
     <style>
-       
-    </style>
+        .bar ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+            }
+  
+        .bar li {
+            float: left;
+            }
+  
+        .bar li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            }
+  
+        .bar li a:hover {
+            background-color: #111;
+            }
+        </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="bar">
+        <ul>
+            <li><a href="portofolio.html">Portofolio</a></li>
+            <li><a href="#">Biodata</a></li>
+            </ul>
+    </div> 
+
     <h1 title="Header 1">Portofolio Kartika Fitri</h1>
     <p>Berikut adalah portofolio pribadi saya selama berkuliah <p>
     <table style="width:60%">
