--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
      <html>
       <head>
          <style>
+            .nav ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #333;
+                }
+
+            .nav li {
+                float: left;
+                }
+
+            .nav li a {
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                }
+
+            .nav li a:hover {
+                background-color: #111;
+                }
+
             h2 {
                border-left: 5px solid grey;
-               background-color: hwb(317 9% 57%);
+               background-color: rgb(151, 93, 135); 
             }
             </style>
             <link rel="stylesheet" href="style.css">
+        </head>
         <body>
+         <div class="nav">
+            <ul>
+               <li><a href="#">Biodata</a></li>
+               <li><a href="portofolio.html">Portofolio</a></li>
+            </ul>
+         </div> 
             <h1>Kartika Fitri</h1>
             <img src="foto seal.jpg" width="100" height="100">
             <p>Haloo semuanya perkenalkan saya merupakan mahasiswi Universitas Negeri Malang program studi S1 Manajemen. Domisili saya di Blitar.Saya suka menyanyi,foto-foto dan explore tempat baru.</p>
