--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <li>2020-Sekarang   Universitas Negeri Malang</li>
                  </ul>
                  <h2>Portofolio</h2>
-                 <p align="justify">Klik link <b><a href="portofoliokartika.html">disini</a> </b> untuk melihat porotfolio saya</p>
+                 <p>Klik link <b><a href="portofolio.html">disini</a> </b> untuk melihat portofolio saya</p>
                  <h2>Kontak Saya</h2>
                  <p ><a href="https://www.linkedin.com/in/kartika-fitri">linkedin</a>
                  </a> <a href="https://instagram.com/kartikaf_?igshid=YmMyMTA2M2Y=">instagram</a>
